# FactoryBot

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/: bot.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/telegram/: __init__.py  apps.py  handlers.py  models.py  serializers.py  services.py  urls.py  views.py
src/telegram/migrations/: 0001_initial.py  0002_initial.py
src/users/: models.py  serializers.py  services.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
